; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/extr_mtdpart.c_part_get_unmapped_area.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/extr_mtdpart.c_part_get_unmapped_area.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_info = type { i32 }
%struct.mtd_part = type { %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i64 (%struct.TYPE_2__*, i64, i64, i64)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.mtd_info*, i64, i64, i64)* @part_get_unmapped_area to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @part_get_unmapped_area(%struct.mtd_info* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.mtd_info*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.mtd_part*, align 8
  store %struct.mtd_info* %0, %struct.mtd_info** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load %struct.mtd_info*, %struct.mtd_info** %5, align 8
  %11 = call %struct.mtd_part* @PART(%struct.mtd_info* %10)
  store %struct.mtd_part* %11, %struct.mtd_part** %9, align 8
  %12 = load %struct.mtd_part*, %struct.mtd_part** %9, align 8
  %13 = getelementptr inbounds %struct.mtd_part, %struct.mtd_part* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %7, align 8
  %16 = add i64 %15, %14
  store i64 %16, i64* %7, align 8
  %17 = load %struct.mtd_part*, %struct.mtd_part** %9, align 8
  %18 = getelementptr inbounds %struct.mtd_part, %struct.mtd_part* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64 (%struct.TYPE_2__*, i64, i64, i64)*, i64 (%struct.TYPE_2__*, i64, i64, i64)** %20, align 8
  %22 = load %struct.mtd_part*, %struct.mtd_part** %9, align 8
  %23 = getelementptr inbounds %struct.mtd_part, %struct.mtd_part* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = load i64, i64* %6, align 8
  %26 = load i64, i64* %7, align 8
  %27 = load i64, i64* %8, align 8
  %28 = call i64 %21(%struct.TYPE_2__* %24, i64 %25, i64 %26, i64 %27)
  ret i64 %28
}

declare dso_local %struct.mtd_part* @PART(%struct.mtd_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
